[gd_scene load_steps=6 format=3 uid="uid://c42mh74d7l2rt"]

[ext_resource type="Script" path="res://addons/ggs/editor/pref_window/pref_window.gd" id="1_ihv6i"]
[ext_resource type="Texture2D" uid="uid://byyjlh0afcrr5" path="res://addons/ggs/assets/file_dialog.svg" id="2_qx4su"]
[ext_resource type="Script" path="res://addons/ggs/editor/pref_window/info_ctnr.gd" id="3_1rins"]
[ext_resource type="Texture2D" uid="uid://nrljysrl7w0m" path="res://addons/ggs/assets/icon_mini.svg" id="3_ggsp5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ki5am"]

[node name="PrefWindow" type="Window"]
title = "GGS Preferences"
size = Vector2i(813, 594)
visible = false
wrap_controls = true
exclusive = true
min_size = Vector2i(500, 0)
script = ExtResource("1_ihv6i")

[node name="BgPanel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WindowBG"

[node name="Margin" type="MarginContainer" parent="BgPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainCtnr" type="VBoxContainer" parent="BgPanel/Margin"]
layout_mode = 2

[node name="OptionsCtnr" type="VBoxContainer" parent="BgPanel/Margin/MainCtnr"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="SettingsDirCtnr" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/OptionsCtnr"]
layout_mode = 2

[node name="SettingDirLabel" type="Label" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/SettingsDirCtnr"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Settings Directory:"

[node name="SettingDirField" type="LineEdit" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/SettingsDirCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="SettingDirBtn" type="Button" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/SettingsDirCtnr"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_qx4su")

[node name="CompDirCtnr" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/OptionsCtnr"]
layout_mode = 2

[node name="CompDirLabel" type="Label" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/CompDirCtnr"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Components Directory:"

[node name="CompDirField" type="LineEdit" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/CompDirCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="CompDirBtn" type="Button" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/CompDirCtnr"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_qx4su")

[node name="SaveFileDirCtnr" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/OptionsCtnr"]
layout_mode = 2

[node name="SaveFileDirLabel" type="Label" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/SaveFileDirCtnr"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Components Directory:"

[node name="SaveFileDirField" type="LineEdit" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/SaveFileDirCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="SaveFileDirBtn" type="Button" parent="BgPanel/Margin/MainCtnr/OptionsCtnr/SaveFileDirCtnr"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_qx4su")

[node name="ResetBtn" type="Button" parent="BgPanel/Margin/MainCtnr/OptionsCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Clear Plugin Data"

[node name="Disclaimer" type="Button" parent="BgPanel/Margin/MainCtnr"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
mouse_filter = 2
theme_override_constants/h_separation = 5
theme_override_styles/normal = SubResource("StyleBoxEmpty_ki5am")
disabled = true
text = "※ All changes take effect after a plugin restart.
※ If confirmed, the plugin will be disabled automatically."
flat = true
alignment = 0

[node name="HSep" type="HSeparator" parent="BgPanel/Margin/MainCtnr"]
layout_mode = 2

[node name="FooterCtnr" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr"]
layout_mode = 2
size_flags_vertical = 8

[node name="InfoCtnr" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/FooterCtnr"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 2
script = ExtResource("3_1rins")

[node name="PluginInfo" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/InfoCtnr"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 2
theme_override_constants/h_separation = 5
text = "Godot Game Settings"
icon = ExtResource("3_ggsp5")
flat = true
alignment = 0

[node name="VersionBtn" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/InfoCtnr"]
layout_mode = 2
tooltip_text = "View Release"
text = "3.0.0"

[node name="ChangelogBtn" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/InfoCtnr"]
layout_mode = 2
tooltip_text = "View Changelog"
text = "Changelog"

[node name="BtnCtnr" type="HBoxContainer" parent="BgPanel/Margin/MainCtnr/FooterCtnr"]
layout_mode = 2
size_flags_horizontal = 10

[node name="OkBtn" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/BtnCtnr"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "OK"

[node name="CancelBtn" type="Button" parent="BgPanel/Margin/MainCtnr/FooterCtnr/BtnCtnr"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Cancel
"

[node name="DirSelectionWndw" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(600, 500)
min_size = Vector2i(600, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
metadata/Target = ""

[node name="ConfirmResetWndw" type="ConfirmationDialog" parent="."]
title = "Clear Plugin Data"
size = Vector2i(497, 135)
ok_button_text = "Reset"
dialog_text = "Are you sure you want to clear ALL plugin data? This includes all categories and settings. NO UNDO.
• A plugin restart is required for the changes to take effect. 
• If confirmed, the plugin will be disabled automatically.
• Please don't forget to update your instantiated UI components as GGS does not automatically update those."
